--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,20 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".spotify.MoviesActivity"
-            android:label="@string/title_activity_movies"
+            android:name=".scores.ScoresActivity"
+            android:label="@string/title_activity_scores"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cloudskol.cloudroid.MainActivity" />
         </activity>
-
         <activity
-            android:name=".scores.ScoresActivity"
-            android:label="@string/title_activity_scores"
+            android:name=".spotify.SpotifyActivity"
+            android:label="@string/title_activity_spotify"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
