--- a/app/src/main/assets/cloudroid.properties
+++ b/app/src/main/assets/cloudroid.properties
@@ -1,1 +1,3 @@
-cloudroid.spotify.path=http://192.168.0.2:9200/cloudtalk/user/_search
+### Keys for Spotify app
+cloudroid.spotify.api.key=
+cloudroid.spotify.discover.movie=http://api.themoviedb.org/3/discover/movie
