--- a/app/src/main/assets/cloudroid.properties
+++ b/app/src/main/assets/cloudroid.properties
@@ -1,3 +1,6 @@
 ### Keys for Spotify app
 cloudroid.spotify.api.key=
 cloudroid.spotify.discover.movie=http://api.themoviedb.org/3/discover/movie
+cloudroid.spotify.movie.poster=http://image.tmdb.org/t/p
+## "92", "w154, "w185", "w342", "w500", "w780", or "original
+cloudroid.spotify.movie.poster.w185=w185
