property changes are done

--- a/app/src/main/assets/cloudroid.properties
+++ b/app/src/main/assets/cloudroid.properties
@@ -4,3 +4,5 @@ cloudroid.spotify.discover.movie=http://api.themoviedb.org/3/discover/movie
 cloudroid.spotify.movie.poster=http://image.tmdb.org/t/p
 ## "92", "w154, "w185", "w342", "w500", "w780", or "original
 cloudroid.spotify.movie.poster.w185=w185
+cloudroid.spotify.movie.poster.w780=w780
+cloudroid.spotify.movie.details=http://api.themoviedb.org/3/movie
